<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_drive"
        android:icon="@drawable/ic_nav_drive"
        android:title="@string/nav_drive" />

    <item
        android:id="@+id/nav_daily"
        android:icon="@drawable/ic_nav_daily"
        android:title="@string/nav_daily" />

    <item
        android:id="@+id/nav_histogram"
        android:icon="@drawable/ic_nav_insights"
        android:title="@string/nav_insights" />

    <item
        android:id="@+id/nav_backup"
        android:icon="@drawable/ic_nav_backup"
        android:title="Settings" />

</menu>
